# serversphere

./: .envrc  .gitignore  Cargo.toml  README.md  dependencies_install_front.sh  flake.nix  startup_back.sh  startup_front.sh
agent/: Cargo.toml  README.md
agent/src/: commands.rs  error.rs  lib.rs  main.rs
agent/systemd/: serversphere-agent.service
agent/tests/: tests.rs
cloud/: Justfile  Makefile  user-data.yml
front/: vnc.html  vnc_lite.html
front/custom/: app.py
front/custom/static/: script.js  script_client.js  stars.js  styles.css
front/custom/templates/: charts.html  client.html  index.html  reg.html
ipxe/dnsmasq/: dnsmasq.conf
ipxe/tftpboot_server/: boot_alpine.ipxe
migrations/: 20241118194843_initial_migration.sql
registry/: Cargo.toml
registry/src/: main.rs
registry/tests/: tests.rs
server/: README.md  db.py  db.sqlite  main.py  pyproject.toml
server/common/: exceptions.py
server/common/dto/: entity.py
server/desktops/: exceptions.py
server/desktops/infra/: desktop_repo.py  sql_queries.py  task.py
server/desktops/infra/dto/: desktops.py  metrics.py  reservation.py
server/desktops/pres/: desktops.py
server/users/infra/: dependency.py  exceptions.py  sql_queries.py  user_repo.py
server/users/infra/dto/: user.py
server/users/rest/: admin.py  exc_handling.py  rest.py  tokens.py  users.py
shells/default/: default.nix
