[package]
name = "serversphere-agent"
version = "1.0.0"
edition = "2021"
authors = ["mxxntype <59417007+mxxntype@users.noreply.github.com>"]

[package.metadata.deb]
maintainer-scripts = "systemd/"
systemd-units = [{ unit-name = "serversphere-agent", enable = true }]

[[bin]]
name = "serversphere-agent"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
axum = { version = "0.7.9", features = ["macros"] }
color-eyre = "0.6.3"
eyre = "0.6.12"
nix = { version = "0.29.0", features = ["reboot"] }
serde = { version = "1.0.215", features = ["derive"] }
sysinfo = "0.32.0"
thiserror = "2.0.3"
tokio = { version = "1.41.1", default-features = false, features = [
    "rt-multi-thread",
    "macros",
] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
